--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -9,8 +9,15 @@
 @import "base/utilities";
 //Imports from Components
 @import "components/button";
+@import "components/bg-video";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/form";
+@import "components/story";
 //Imports from Layout
 @import "layout/header";
+@import "layout/grid";
 //Imports from Pages
 @import "pages/home";
 
