--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -6,8 +6,6 @@ body {
   padding: 3rem;
 }
 
-
-
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
@@ -37,3 +35,33 @@ body {
   }
 }
 
+.heading-secondary {
+  font-size: 3.25rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient($color-primary-light, $color-primary-dark);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transform: all .2s;
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2)
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+  .paragraph{
+    font-size: $default-font-size;
+
+    &:not(:last-child){
+      margin-bottom: 3rem;
+   
+    }
+  }
