--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,6 +1,7 @@
 
 
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -10,7 +11,12 @@
     border-radius: 10rem;
     transition: all .2s;
     position: relative;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
+
+
+    //Change the button element
+    border: none;
+    cursor: pointer;
   }
   &:hover {
     transform: translateY(-3px);
@@ -20,18 +26,32 @@
       opacity: 0;
     }
   }
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 .5rem 1rem rgba($color-black, .3);
   }
   &--white {
     background-color: $color-white;
     color: $color-gray-dark;
-    text-align: center;
+  
     &::after {
       background-color: $color-white;
     }
   }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
+
+
   &::after {
     content: "";
     display: inline-block;
@@ -48,4 +68,33 @@
     animation: moveInButtom .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
+}
+
+.btn-text{
+
+  &:link,
+  &:visited{
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    transition:  all .2s;
+  }
+
+
+  &:hover{
+    background-color:  $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    transform:  translateY(-2px);
+
+  }
+
+  &:active{
+    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    transform:  translateY(0);
+  }
+
 }
