--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/form";
+@import "components/popup";
 @import "components/story";
 //Imports from Layout
 @import "layout/header";
